// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toggle > renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-5[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.125rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-4:hover {
  background-color: #d9dadd;
}

.emotion-4:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-4:focus-within,
.emotion-4:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-4[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-4[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-4[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-4[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-4[data-checked="true"]:focus-within,
.emotion-4[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-4[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-4[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-4[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-4[data-error="true"]:focus-within,
.emotion-4[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-4[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-4[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-4[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-6 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-6[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      />
      <div
        class="emotion-4 emotion-5"
        data-checked="false"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-checked="false"
          class="emotion-6 emotion-7"
          id="«r0»"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`Toggle > renders correctly label 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-9[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.125rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-6 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-8:hover {
  background-color: #d9dadd;
}

.emotion-8:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-8:focus-within,
.emotion-8:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-8[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-8[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-8[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-8[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-8[data-checked="true"]:focus-within,
.emotion-8[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-8[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-8[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-8[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-8[data-error="true"]:focus-within,
.emotion-8[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-8[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-8[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-8[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-10 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-10[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7"
          >
            This is a label
          </span>
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
        data-checked="false"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-checked="false"
          class="emotion-10 emotion-11"
          id="«re»"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`Toggle > renders correctly when checked 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-5[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.125rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-4:hover {
  background-color: #d9dadd;
}

.emotion-4:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-4:focus-within,
.emotion-4:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-4[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-4[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-4[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-4[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-4[data-checked="true"]:focus-within,
.emotion-4[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-4[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-4[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-4[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-4[data-error="true"]:focus-within,
.emotion-4[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-4[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-4[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-4[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-6 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-6[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      />
      <div
        class="emotion-4 emotion-5"
        data-checked="true"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-checked="true"
          checked=""
          class="emotion-6 emotion-7"
          id="«r2»"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`Toggle > renders correctly when disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-5[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.125rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-4:hover {
  background-color: #d9dadd;
}

.emotion-4:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-4:focus-within,
.emotion-4:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-4[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-4[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-4[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-4[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-4[data-checked="true"]:focus-within,
.emotion-4[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-4[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-4[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-4[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-4[data-error="true"]:focus-within,
.emotion-4[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-4[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-4[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-4[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-6 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-6[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="true"
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      />
      <div
        class="emotion-4 emotion-5"
        data-checked="false"
        data-disabled="true"
        data-error="false"
      >
        <input
          aria-checked="false"
          class="emotion-6 emotion-7"
          disabled=""
          id="«r4»"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`Toggle > renders correctly when required with label 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-11[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.125rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-6 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  vertical-align: middle;
  fill: #b3144d;
  height: 8px;
  width: 8px;
  min-width: 8px;
  min-height: 8px;
}

.emotion-8 .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.emotion-10 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-10:hover {
  background-color: #d9dadd;
}

.emotion-10:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-10:focus-within,
.emotion-10:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-10[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-10[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-10[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-10[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-10[data-checked="true"]:focus-within,
.emotion-10[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-10[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-10[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-10[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-10[data-error="true"]:focus-within,
.emotion-10[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-10[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-10[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-10[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-12 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-12[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7"
          >
            test
          </span>
          <sup>
            <svg
              class="emotion-8 emotion-9"
              viewBox="0 0 20 20"
            >
              <path
                d="M10 2h4l-.79 7.91 6.45-4.64 2 3.46L14.42 12l7.24 3.27-2 3.46-6.45-4.64L14 22h-4l.79-7.91-6.45 4.64-2-3.46L9.58 12 2.34 8.73l2-3.46 6.45 4.64z"
              />
            </svg>
          </sup>
        </div>
      </div>
      <div
        class="emotion-10 emotion-11"
        data-checked="false"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-checked="false"
          class="emotion-12 emotion-13"
          id="«r6»"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`Toggle > renders correctly when required with label left 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-0:active .emotion-11[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.125rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-6 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  vertical-align: middle;
  fill: #b3144d;
  height: 8px;
  width: 8px;
  min-width: 8px;
  min-height: 8px;
}

.emotion-8 .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.emotion-10 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-10:hover {
  background-color: #d9dadd;
}

.emotion-10:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-10:focus-within,
.emotion-10:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-10[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-10[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-10[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-10[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-10[data-checked="true"]:focus-within,
.emotion-10[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-10[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-10[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-10[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-10[data-error="true"]:focus-within,
.emotion-10[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-10[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-10[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-10[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-12 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-12[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7"
          >
            test
          </span>
          <sup>
            <svg
              class="emotion-8 emotion-9"
              viewBox="0 0 20 20"
            >
              <path
                d="M10 2h4l-.79 7.91 6.45-4.64 2 3.46L14.42 12l7.24 3.27-2 3.46-6.45-4.64L14 22h-4l.79-7.91-6.45 4.64-2-3.46L9.58 12 2.34 8.73l2-3.46 6.45 4.64z"
              />
            </svg>
          </sup>
        </div>
      </div>
      <div
        class="emotion-10 emotion-11"
        data-checked="false"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-checked="false"
          class="emotion-12 emotion-13"
          id="«r9»"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`Toggle > renders correctly with complex label 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-7[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.125rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-6 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-6:hover {
  background-color: #d9dadd;
}

.emotion-6:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-6:focus-within,
.emotion-6:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-6[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-6[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-6[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-6[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-6[data-checked="true"]:focus-within,
.emotion-6[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-6[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-6[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-6[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-6[data-error="true"]:focus-within,
.emotion-6[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-6[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-6[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-6[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-8 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-8[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <span>
            Custom label rendered
          </span>
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
        data-checked="false"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-checked="false"
          class="emotion-8 emotion-9"
          id="«rq»"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`Toggle > renders correctly with custom labels on right 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-9[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.125rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-6 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-8:hover {
  background-color: #d9dadd;
}

.emotion-8:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-8:focus-within,
.emotion-8:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-8[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-8[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-8[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-8[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-8[data-checked="true"]:focus-within,
.emotion-8[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-8[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-8[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-8[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-8[data-error="true"]:focus-within,
.emotion-8[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-8[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-8[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-8[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-10 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-10[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7"
          >
            This is a label
          </span>
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
        data-checked="false"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-checked="false"
          class="emotion-10 emotion-11"
          id="«rn»"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`Toggle > renders correctly with error 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-11[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-11[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.125rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.125rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-4 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-6 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  color: #b3144d;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-10:hover {
  background-color: #d9dadd;
}

.emotion-10:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-10:focus-within,
.emotion-10:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-10[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-10[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-10[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-10[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-10[data-checked="true"]:focus-within,
.emotion-10[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-10[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-10[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-10[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-10[data-error="true"]:focus-within,
.emotion-10[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-10[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-10[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-10[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-10 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-10:hover {
  background-color: #d9dadd;
}

.emotion-10:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-10:focus-within,
.emotion-10:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-10[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-10[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-10[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-10[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-10[data-checked="true"]:focus-within,
.emotion-10[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-10[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-10[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-10[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-10[data-error="true"]:focus-within,
.emotion-10[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-10[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-10[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-10[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-12 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-12[disabled] {
  cursor: not-allowed;
}

.emotion-12 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-12[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7"
          >
            This is a label
          </span>
        </div>
        <p
          class="emotion-8 emotion-7"
        >
          error text
        </p>
      </div>
      <div
        class="emotion-10 emotion-11"
        data-checked="false"
        data-disabled="false"
        data-error="true"
      >
        <input
          aria-checked="false"
          class="emotion-12 emotion-13"
          id="«r13»"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`Toggle > renders correctly with helper 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-11[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-11[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.125rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.125rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-4 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-6 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  color: #727683;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-10:hover {
  background-color: #d9dadd;
}

.emotion-10:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-10:focus-within,
.emotion-10:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-10[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-10[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-10[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-10[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-10[data-checked="true"]:focus-within,
.emotion-10[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-10[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-10[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-10[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-10[data-error="true"]:focus-within,
.emotion-10[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-10[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-10[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-10[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-10 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-10:hover {
  background-color: #d9dadd;
}

.emotion-10:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-10:focus-within,
.emotion-10:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-10[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-10[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-10[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-10[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-10[data-checked="true"]:focus-within,
.emotion-10[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-10[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-10[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-10[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-10[data-error="true"]:focus-within,
.emotion-10[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-10[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-10[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-10[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-12 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-12[disabled] {
  cursor: not-allowed;
}

.emotion-12 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-12[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7"
          >
            This is a label
          </span>
        </div>
        <p
          class="emotion-8 emotion-7"
        >
          This is a helper
        </p>
      </div>
      <div
        class="emotion-10 emotion-11"
        data-checked="false"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-checked="false"
          class="emotion-12 emotion-13"
          id="«rv»"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`Toggle > renders correctly with labels on left 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-0:active .emotion-9[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.125rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-6 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-8:hover {
  background-color: #d9dadd;
}

.emotion-8:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-8:focus-within,
.emotion-8:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-8[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-8[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-8[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-8[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-8[data-checked="true"]:focus-within,
.emotion-8[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-8[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-8[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-8[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-8[data-error="true"]:focus-within,
.emotion-8[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-8[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-8[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-8[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-10 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-10[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7"
          >
            This is a label
          </span>
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
        data-checked="false"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-checked="false"
          class="emotion-10 emotion-11"
          id="«rk»"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`Toggle > renders correctly with non default size 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-5[data-disabled='false']:after {
  width: calc(0.75rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.125rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 2.5rem;
  height: 1.25rem;
}

.emotion-4:hover {
  background-color: #d9dadd;
}

.emotion-4:after {
  content: "";
  position: absolute;
  top: calc(1.25rem / 2 - 0.75rem / 2);
  left: 5px;
  width: 0.75rem;
  height: 0.75rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-4:focus-within,
.emotion-4:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-4[data-disabled="false"]:active:after {
  width: calc(0.75rem * 1.3775);
}

.emotion-4[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-4[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-4[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-4[data-checked="true"]:focus-within,
.emotion-4[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-4[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-4[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-4[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-4[data-error="true"]:focus-within,
.emotion-4[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-4[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-4[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-4[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-6 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-6[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      />
      <div
        class="emotion-4 emotion-5"
        data-checked="false"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-checked="false"
          class="emotion-6 emotion-7"
          id="«rc»"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`Toggle > renders correctly with tooltip 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-2:active .emotion-11[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-2[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.125rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-8 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-10:hover {
  background-color: #d9dadd;
}

.emotion-10:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-10:focus-within,
.emotion-10:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-10[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-10[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-10[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-10[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-10[data-checked="true"]:focus-within,
.emotion-10[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-10[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-10[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-10[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-10[data-error="true"]:focus-within,
.emotion-10[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-10[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-10[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-10[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-12 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-12[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="«ri»"
      aria-describedby="«ri»"
      class="emotion-0 emotion-1"
      tabindex="0"
    >
      <label
        aria-disabled="false"
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-7"
          >
            <span
              class="emotion-8 emotion-9"
            >
              This is a label
            </span>
          </div>
        </div>
        <div
          class="emotion-10 emotion-11"
          data-checked="false"
          data-disabled="false"
          data-error="false"
        >
          <input
            aria-checked="false"
            class="emotion-12 emotion-13"
            id="«rh»"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </div>
  </div>
</DocumentFragment>
`;
